--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "devDependencies": {
     "cross-env": "^6.0.3",
     "nodemon": "^1.19.4"
+  },
+  "dependencies": {
+    "mysql": "^2.17.1"
   }
 }
